--- a/food-crossroads/src/css/member_editpwd.css
+++ b/food-crossroads/src/css/member_editpwd.css
@@ -46,59 +46,66 @@
 
 /* 側邊欄 end */
 
-#edit_pwd .member_editinfo_btn {
+#edit_pwd{
+  display: flex;
+  justify-content: center;
+  margin-top: 2%;
+  width: 100%;
+}
+
+#edit_pwd .member_div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #403c3c;
   border-radius: 5px;
-  margin-top: 30px;
-  padding-top: 0px;
-  margin-left: 40px;
-  width: 150px;
+  padding: 20px 50px;
+  width: 40%;
+}
+
+#edit_pwd .title_member_edit {
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#edit_pwd .form-control {
+  width: 300px;
+}
+
+#edit_pwd .edit_btn_div{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 10% 0;
+}
+
+#edit_pwd .member_back_btn {
+  margin-right: 20px;
+  border-radius: 5px;
+  width: 40%;
   height: 40px;
   color: #fff;
-  font-size: 18px;
-  border: none;
+  background-color: #403c3c;
+  transition: 0.3s;
+}
+
+#edit_pwd .member_back_btn:hover {
+  background-color: #524d4d;
+}
+
+#edit_pwd .member_editinfo_btn {
+  border-radius: 5px;
+  margin-left: 20px;
+  width: 40%;
+  height: 40px;
+  color: #fff;
   background-color: #8b1309;
   transition: 0.3s;
 }
 
 #edit_pwd .member_editinfo_btn:hover {
   background-color: #a30f01;
-}
-
-#edit_pwd .member_editpwd_btn:hover {
-  background-color: #a30f01;
-}
-
-#edit_pwd .member_confirm_btn {
-  border-radius: 5px;
-  margin-top: 30px;
-  margin-left: 50px;
-  width: 150px;
-  height: 40px;
-  color: #fff;
-  font-size: 18px;
-  border: none;
-  background-color: #8b1309;
-  transition: 0.3s;
-}
-
-#edit_pwd .member_confirm_btn:hover {
-  background-color: #a30f01;
-}
-#edit_pwd .member_back_btn {
-  margin-left: 30px;
-  border-radius: 5px;
-  margin-top: 30px;
-  width: 150px;
-  height: 40px;
-  color: #fff;
-  font-size: 18px;
-  border: none;
-  background-color: #403c3c;
-  transition: 0.3s;
-}
-
-#edit_pwd .member_back_btn:hover {
-  background-color: #8d8c8c;
 }
 
 /* RWD start */
@@ -158,24 +165,51 @@
     transition: 0.3s;
     width: 100%;
   }
+  #edit_pwd .member_div {
+    width: 50%;
+    margin-top: 4%;
+  }
+  
+  #edit_pwd .form-control {
+    width: 70%;
+  }
 }
 
 /* 大型螢幕 */
 
 @media screen and (max-width: 992px) {
-
+  #edit_pwd .member_div {
+    padding: 20px 40px;
+    width: 60%;
+  }
 }
 
 /* 平板 */
 
 @media screen and (max-width: 768px) {
-
+  #edit_pwd .member_div {
+    padding: 20px 20px;
+    width: 80%;
+  }
+  
+  #edit_pwd .form-control {
+    width: 100%;
+  }
 }
 
 /* 手機 */
 
 @media screen and (max-width: 576px) {
-
+  #edit_pwd .member_div {
+    padding: 20px 5px;
+  }
+  
+  #edit_pwd .form-control {
+    width: 100%;
+  }
+  #edit_pwd .member_back_btn{
+    /* margin-right: 5px; */
+  }
 }
 
 /* 小手機 */
