--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -27,7 +27,7 @@
   padding-bottom: 15px;
 }
 
-.input_box {
+#MemberRegister .input_box {
   width: 300px;
   margin-left: 20px;
 }
@@ -79,43 +79,43 @@
 /* 超大型螢幕 */
 
 @media screen and (max-width: 1200px) {
-  .container {
+  #MemberRegister .container {
     /* border: 1px solid black; */
     margin-top: -30px;
   }
 
-  .register_title {
+  #MemberRegister .register_title {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 15px;
   }
 
-  .member_icon {
+  #MemberRegister .member_icon {
     width: 30px;
   }
 
-  .register_title_text {
+  #MemberRegister .register_title_text {
     font-size: 25px;
     font-weight: 600;
   }
 
-  .input_box {
+  #MemberRegister .input_box {
     width: 200px;
     margin-left: 10px;
   }
 
-  .form_text {
+  #MemberRegister .form_text {
     font-size: 16px;
     letter-spacing: 10px;
   }
 
-  .password_confirm {
+  #MemberRegister .password_confirm {
     position: relative;
     right: 53px;
   }
 
-  .register_btn {
+  #MemberRegister .register_btn {
     padding: 5px;
     width: 100%;
     margin-top: 0px;
@@ -130,43 +130,43 @@
 /* 平板 */
 
 @media screen and (max-width: 768px) {
-  .container {
+  #MemberRegister .container {
     /* border: 1px solid black; */
     margin-top: 80px;
   }
 
-  .register_title {
+  #MemberRegister .register_title {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
   }
 
-  .member_icon {
+  #MemberRegister .member_icon {
     width: 35px;
   }
 
-  .register_title_text {
+  #MemberRegister .register_title_text {
     font-size: 30px;
     font-weight: 600;
   }
 
-  .input_box {
+  #MemberRegister .input_box {
     width: 250px;
     margin-left: 10px;
   }
 
-  .form_text {
+  #MemberRegister .form_text {
     font-size: 20px;
     letter-spacing: 10px;
   }
 
-  .password_confirm {
+  #MemberRegister .password_confirm {
     position: relative;
     right: 60px;
   }
 
-  .register_btn {
+  #MemberRegister .register_btn {
     padding: 5px;
     width: 100%;
     margin-top: 30px;
@@ -176,44 +176,44 @@
 /* 手機 */
 
 @media screen and (max-width: 576px) {
-  .container {
+  #MemberRegister .container {
     /* border: 1px solid black; */
     margin-top: -25px;
   }
 
-  .register_title {
+  #MemberRegister .register_title {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
   }
 
-  .member_icon {
+  #MemberRegister .member_icon {
     width: 25px;
   }
 
-  .register_title_text {
+  #MemberRegister .register_title_text {
     font-size: 22px;
     font-weight: 600;
   }
 
-  .input_box {
+  #MemberRegister .input_box {
     width: 180px;
     margin-left: 10px;
   }
 
-  .form_text {
+  #MemberRegister .form_text {
     font-size: 15px;
     font-weight: 600;
     letter-spacing: 5px;
   }
 
-  .password_confirm {
+  #MemberRegister .password_confirm {
     position: relative;
     right: 40px;
   }
 
-  .register_btn {
+  #MemberRegister .register_btn {
     padding: 5px;
     width: 100%;
     margin-top: 25px;
