--- a/food-crossroads/src/css/shoppingok.css
+++ b/food-crossroads/src/css/shoppingok.css
@@ -46,7 +46,7 @@
   text-align: start;
 }
 
-#buy-ok-btn {
+.all-squre #buy-ok-btn {
   width: 20%;
   height: 40px;
   background-color: #8b1309;
@@ -55,19 +55,20 @@
   transition: 0.3s;
 }
 
-#buy-ok-btn:hover {
+.all-squre #buy-ok-btn:hover {
   background-color: #a30f01;
 }
 
-#buy-back-btn {
+#all-squre #buy-back-btn {
   width: 20%;
   height: 40px;
   background-color: #403c3c;
   color: white;
   border-radius: 5px;
+  transition: 0.3s;
 }
 
-#buy-back-btn:hover {
+#all-squre #buy-back-btn:hover {
   background-color: #4b4747;
 }
 
