--- a/food-crossroads/src/css/orderdisplay.css
+++ b/food-crossroads/src/css/orderdisplay.css
@@ -20,6 +20,14 @@ tbody td:nth-child(5) {
   width: 0.5em;
 }
 
+#orderdisplay th {
+  border-bottom: 1px solid #999999;
+}
+
+#orderdisplay td {
+  vertical-align: middle;
+}
+
 #orderdisplay .order_member_table {
   background-color: 1px solid black;
 }
