--- a/food-crossroads/src/css/shoppingchar.css
+++ b/food-crossroads/src/css/shoppingchar.css
@@ -15,6 +15,7 @@
 
 #shoppingchar table th {
   text-align: center;
+  border-top: 1px solid #999999;
 }
 
 #shoppingchar .tr_title {
@@ -139,7 +140,7 @@ position: relative;
   border: none;
   color: white;
   border-radius: 5px;
-position: relative;
+  position: relative;
   left: -140px;
 
   }
